# DREngine

./: .gitmodules  CMakeLists.txt  README.txt  updateImport.bat
dependencies/Core2/: CMakeLists.txt
dependencies/Core2/include/: Core2Main.h  DRFrustumCulling.h  DRGameStateManager.h  DRIResource.h  DRIndexReferenzHolder.h  DRLogger.h  DRMatrix.h  DRObjekt.h  DRRandom.h  DRResourcePtr.h  DRVector2.h  DRVector3.h
dependencies/Core2/src/: CMakeLists.txt  Core2Main.cpp  DRCubicSpline.cpp  DRDampingSpring.cpp  DRFile.cpp  DRFileManager.cpp  DRFrustumCulling.cpp  DRGameStateManager.cpp  DRHashList.cpp  DRIndexReferenzHolder.cpp  DRIni.cpp  DRLogger.cpp  DRMatrix.cpp  DRObjekt.cpp  DRPlane.cpp  DRRandom.cpp  DRResourcePtr.cpp  DRResourcePtrHolder.cpp  DRUtils.cpp  DRVector2.cpp  DRVector3.cpp
dependencies/Core2/test/: CMakeLists.txt  main.cpp
dependencies/Image/: CMakeLists.txt
dependencies/Image/include/: DRImage.h  DRImageMain.h  Image.h  ImageMain.h
dependencies/Image/src/: CMakeLists.txt  DRImage.cpp  DRImageMain.cpp  Image.cpp  ImageMain.cpp
dependencies/Network/: CMakeLists.txt
dependencies/Network/include/: Connection.h  NetCallback.h  Network.h  NetworkMain.h  Request.h
dependencies/Network/src/: CMakeLists.txt  Connection.cpp  NetCallback.cpp  Network.cpp  NetworkMain.cpp  Request.cpp
dependencies/Network/test/: CMakeLists.txt
dependencies/include/Core2/: Core2Main.h  DRFileManager.h  DRLogger.h  DRRandom.h  DRResourcePtr.h  DRVector2.h  DRVector2i.h  DRVector3.h
dependencies/include/sdl/: SDL_config.h
import/include/: DRIImage.h  DRInterface.h  DRTextur.h  DRThread.h  DRVideoConfig.h  Engine2Main.h
import/include/Core2/: Core2Main.h  DRFile.h  DRFrustumCulling.h  DRLogger.h  DRMatrix.h  DRRandom.h  DRVector3.h
include/: DREngineLogger.h  DRGeometrie.h  DRGeometrieIcoSphere.h  DRGeometrieSphere.h  DRIImage.h  DRINetwork.h  DRInterface.h  DRIvlc.h  DRRandom.h  DRSaveTexture.h  DRText.h  DRTextur.h  DRTexture.h  DRTextureManager.h  DRThread.h  DRVideoConfig.h  Engine2Main.h  glExtensions.h
include/DREngine/: Const.h  DRGeometrie.h  DRGeometrieIcoSphere.h  DRGeometrieSphere.h  DRIImage.h  DRINetwork.h  DRInterface.h  DRIvlc.h  DRLogging.h  DRSaveTexture.h  DRText.h  DRTexture.h  DRTextureManager.h  DRVideoConfig.h  Engine2Main.h  OpenGL.h
packaging/: CMakeLists.txt  DREngineConfigVersion.cmake
plugins/: CMakeLists.txt
plugins/Image/: CMakeLists.txt
plugins/Image/FreeImage/: CMakeLists.txt
plugins/Image/FreeImage/include/: DRImage.h  DRImageMain.h  export.h
plugins/Image/FreeImage/src/: CMakeLists.txt  DRImage.cpp  DRImageMain.cpp
plugins/Image/include/: DRImage.h  DRImageMain.h
plugins/Image/src/: DRImage.cpp
plugins/Network/: CMakeLists.txt
plugins/Network/include/: Connection.h  NetCallback.h  Network.h  NetworkMain.h  Request.h
plugins/Network/src/: CMakeLists.txt  Connection.cpp  NetCallback.cpp  Network.cpp  NetworkMain.cpp  Request.cpp
plugins/Network/test/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  DREngineLogger.cpp  DRGeometrie.cpp  DRGeometrieIcoSphere.cpp  DRGeometrieSphere.cpp  DRIImage.cpp  DRINetwork.cpp  DRInterface.cpp  DRIvlc.cpp  DRLogging.cpp  DRSaveTexture.cpp  DRText.cpp  DRTextur.cpp  DRTexture.cpp  DRTextureManager.cpp  DRThread.cpp  DRVideoConfig.cpp  Engine2Main.cpp  glExtensions.cpp  glew.cpp
test/: CMakeLists.txt  IniTest.cpp  IniTest.h  main.cpp
x64/: CMakeLists.txt
x64/Core2/: CMakeLists.txt
x64/Engine2/: CMakeLists.txt
x64/Image/: CMakeLists.txt
