# Core
cmake_minimum_required(VERSION 2.6)

PROJECT(scripts/Core2 CXX)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../../lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../bin)
SET(ARCHIVE_OUTPUT_DIRECTORY ../../lib)
#SET(CMAKE_BUILD_TYPE Debug)

SUBDIRS(src test)
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(lib)
INCLUDE_DIRECTORIES(bin)


#ADD_LIBRARY(Core2 SHARED core2main.cpp)
#ADD_EXECUTABLE(test ${testSrc})
