# Network
PROJECT(scripts/Network CXX)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../../../bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ../../lib)

SUBDIRS(src)
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(lib)
INCLUDE_DIRECTORIES(bin)
INCLUDE_DIRECTORIES(../include)
INCLUDE_DIRECTORIES(../bin)
INCLUDE_DIRECTORIES(../../bin)
INCLUDE_DIRECTORIES(../../include)


cmake_minimum_required(VERSION 2.6)


#ADD_LIBRARY(Core2 SHARED core2main.cpp)
#ADD_EXECUTABLE(test ${testSrc})
